# CLAUDE_CODE_TEST

./: .idealista_session.json  Idealista_Property_Analysis.xlsx  README.md  config.example.yaml  pyproject.toml  ~$Idealista_Property_Analysis.xlsx
.claude/: settings.local.json
debug/20260426_151451/: page.html
debug/20260426_152157/: page.html
debug/20260426_152217/: page.html
debug/20260426_152236/: page.html
debug/20260426_152509/: page.html
debug/20260426_154601/: page.html
idealista_extractor/: __init__.py  cli.py  config.py  models.py
idealista_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
idealista_extractor/excel/: template.py  writer.py
idealista_extractor/scraper/: browser.py  listing.py  search.py
idealista_extractor/utils/: geo.py  rate_limit.py
tests/: test_listing_parser.py  test_search_parser.py
tests/fixtures/: rent_sample.html  sale_sample.html  search_page_sample.html
