[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idealista-extractor"
version = "0.1.0"
description = "Scrape Idealista area search results and export to Excel investment analysis workbook"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "openpyxl>=3.1.4",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "lxml>=5.0.0",
]

[project.scripts]
idealista-extractor = "idealista_extractor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["idealista_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
